@@ -26,6 +26,10 @@ Improved breakpoint parser:
 -full expression parser: parenthesis, functions, sums, multiplications, etc. Can be used as a full calculator!
 -now it's a lot more faster. Up to 7 times faster, so it uses 7 times less cpu than the old version
 
+Improved watches:
+-using new expression parser
+-up to 10 watches on screen
+
 Improved adventure text extractor: now supports Daad games too. So it supports Daad, Paws, Quill and Gac
 Improved footer:
 -Footer now completely follows GUI Style
